# Youtube_Tiktok_WEB

./: .env.example  .env.production.example  .gitignore  Dockerfile  Fabric_big_one_v1.py  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/models/: plan.rs  source.rs  subscription.rs  user.rs  video.rs
backend/src/repositories/: admin.rs  admin_audit_logs.rs  alerts.rs  email_logs.rs  email_verification.rs  favorites.rs  notifications.rs  password_reset.rs  reports.rs  stripe_events.rs  subscriptions.rs  users.rs  videos.rs  watchlists.rs
backend/src/routes/: admin.rs  alerts.rs  auth.rs  billing.rs  exports.rs  favorites.rs  health.rs  me.rs  metrics.rs  notes.rs  notifications.rs  plans.rs  radar.rs  reports.rs  videos.rs  watchlists.rs
backend/src/services/: access.rs  alerts.rs  analytics.rs  cache.rs  email.rs  queue.rs  rate_limit.rs  reports.rs  scoring.rs  storage.rs  stripe.rs  telegram.rs  youtube.rs
backend/src/sources/: instagram.rs  mod.rs  tiktok.rs  youtube.rs
backend/src/templates/email/: subscription-cancelled.html
backend/src/worker/: jobs.rs  mod.rs  scanner.rs  scheduler.rs
backend/tests/: auth_flow.rs  billing_webhook.rs  plan_limits.rs  watchlists.rs
docs/: monitoring.md  production.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: backup-clickhouse.sh  backup-postgres.sh  check-prod-env.sh  go-live-check.sh  (+15 more)
(+189 files in other folders)
